--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "TravelOpenTraining",
+  "name": "OneDistrict-Sample",
   "dependencies": {
     "foundation": "zurb/bower-foundation"
   }
