--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "TravelOpenTraining",
+  "name": "OneDistrict-Sample",
   "version": "0.0.1",
   "devDependencies": {
     "node-sass": "~0.7.0",
